tests/NormalTests/paczka1/fuzzy1/18382689.err
Error in line 5: A4 S858 50,8
Error in line 10: Ys14 A399 75,8
Error in line 16: A4 S858 74,0
Error in line 17: A4 S858 323,4
Error in line 4: jJW4AyCtII S858 143,4
Error in line 25: A4 S858 50,3
Error in line 27: A4 A399 30,2
Error in line 28: A4 A399 0,9
Error in line 31: Ys14 S858 12,1
